Swan-JS-Card #comment adding list view

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,3 +13,10 @@ html,
   font-family: Helvetica;
   font-style: normal;
 }
+*{
+  margin:0;
+  padding:0;
+}
+.section{
+  margin-bottom: 15px;
+}
